--- a/SOCloseVoteTracker/Console.csproj
+++ b/SOCloseVoteTracker/Console.csproj
@@ -68,6 +68,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{7DD019C3-42A1-4F45-B2E4-1EE18BCD7CAF}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utils\Utils.csproj">
       <Project>{1B18CBB6-FB29-4F96-B9F5-E870A9983C67}</Project>
       <Name>Utils</Name>
