Allow app.config to configure settings location completely Remove dev status badge - not useful

--- a/SOCloseVoteTracker/App.config
+++ b/SOCloseVoteTracker/App.config
@@ -8,7 +8,7 @@
     <add name="DBConnectionString" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="RootDirectory" value="../../../"/>
+    <add key="SettingsFileLocation" value="../../../settings.json"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
