--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.3.1" targetFramework="net452" />
+  <package id="Hangfire" version="1.5.4" targetFramework="net452" />
+  <package id="Hangfire.Core" version="1.5.4" targetFramework="net452" />
+  <package id="Hangfire.SqlServer" version="1.5.4" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
 </packages>
