Fix an issue with resharper

--- a/Core/packages.config
+++ b/Core/packages.config
@@ -8,5 +8,5 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
 </packages>
