--- a/SOCloseVoteTracker/packages.config
+++ b/SOCloseVoteTracker/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.3.1" targetFramework="net452" />
-  <package id="Dapper" version="1.50.0-beta8" targetFramework="net452" />
+  <package id="Dapper" version="1.50.0-beta8" targetFramework="net452" requireReinstallation="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
 </packages>
