--- a/Core/packages.config
+++ b/Core/packages.config
@@ -6,7 +6,8 @@
   <package id="Hangfire.SqlServer" version="1.5.4" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net452" />
+  <package id="morelinq" version="2.0.0-beta03" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
 </packages>
