--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MoreLinq, Version=2.0.19309.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
+      <HintPath>..\packages\morelinq.2.0.0-beta03\lib\net35\MoreLinq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -58,6 +62,10 @@
     <Compile Include="Migrations\201603230537050_BasicQuestionsAndTags.Designer.cs">
       <DependentUpon>201603230537050_BasicQuestionsAndTags.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603240116122_AddMoreDetailsToQuestion.cs" />
+    <Compile Include="Migrations\201603240116122_AddMoreDetailsToQuestion.Designer.cs">
+      <DependentUpon>201603240116122_AddMoreDetailsToQuestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -68,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201603230537050_BasicQuestionsAndTags.resx">
       <DependentUpon>201603230537050_BasicQuestionsAndTags.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603240116122_AddMoreDetailsToQuestion.resx">
+      <DependentUpon>201603240116122_AddMoreDetailsToQuestion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
