--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -82,11 +82,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackOverflowAuthenticator.cs" />
     <Compile Include="StackOverflowConnecter.cs" />
     <Compile Include="StackOverflowResults\RecentCloseVote.cs" />
-    <Compile Include="Workers\TrackCloseVotes.cs" />
+    <Compile Include="Workers\Pollers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
