--- a/Web/Web.config
+++ b/Web/Web.config
@@ -28,6 +28,7 @@
   -->
   <system.web>
     <authentication mode="None" />
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
