Start watching chat for CVPls and tie them to questions

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -26,6 +26,11 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+  <system.net>
+    <!--<defaultProxy>
+      <proxy proxyaddress="http://gateway.zscaler.net:9400" />
+    </defaultProxy>-->
+  </system.net>
   <system.web>
     <authentication mode="None" />
     <customErrors mode="Off" />
