--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -66,6 +66,18 @@
     <Compile Include="Migrations\201603270714275_InitialSchema.Designer.cs">
       <DependentUpon>201603270714275_InitialSchema.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603310129140_StartTrackingMoreInfo.cs" />
+    <Compile Include="Migrations\201603310129140_StartTrackingMoreInfo.Designer.cs">
+      <DependentUpon>201603310129140_StartTrackingMoreInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603310404254_TrackTimeOnCVPlsRequests.cs" />
+    <Compile Include="Migrations\201603310404254_TrackTimeOnCVPlsRequests.Designer.cs">
+      <DependentUpon>201603310404254_TrackTimeOnCVPlsRequests.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603310409133_TrackFullCVSPlsRequest.cs" />
+    <Compile Include="Migrations\201603310409133_TrackFullCVSPlsRequest.Designer.cs">
+      <DependentUpon>201603310409133_TrackFullCVSPlsRequest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +88,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201603270714275_InitialSchema.resx">
       <DependentUpon>201603270714275_InitialSchema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603310129140_StartTrackingMoreInfo.resx">
+      <DependentUpon>201603310129140_StartTrackingMoreInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603310404254_TrackTimeOnCVPlsRequests.resx">
+      <DependentUpon>201603310404254_TrackTimeOnCVPlsRequests.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603310409133_TrackFullCVSPlsRequest.resx">
+      <DependentUpon>201603310409133_TrackFullCVSPlsRequest.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
