--- a/SOCloseVoteTracker/packages.config
+++ b/SOCloseVoteTracker/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.3.1" targetFramework="net452" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="Dapper" version="1.50.0-beta8" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.5.4" targetFramework="net45" />
@@ -9,4 +10,6 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.0.40" targetFramework="net45" />
+  <package id="WebSocketSharp" version="1.0.3-rc9" targetFramework="net45" />
 </packages>
