Fix querying questions I voted on

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -78,6 +78,10 @@
     <Compile Include="Migrations\201603310409133_TrackFullCVSPlsRequest.Designer.cs">
       <DependentUpon>201603310409133_TrackFullCVSPlsRequest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603310502123_MoveDatesToUTC.cs" />
+    <Compile Include="Migrations\201603310502123_MoveDatesToUTC.Designer.cs">
+      <DependentUpon>201603310502123_MoveDatesToUTC.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -97,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603310409133_TrackFullCVSPlsRequest.resx">
       <DependentUpon>201603310409133_TrackFullCVSPlsRequest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603310502123_MoveDatesToUTC.resx">
+      <DependentUpon>201603310502123_MoveDatesToUTC.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
