--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -36,6 +36,10 @@
       <HintPath>..\packages\AngleSharp.0.3.1\lib\portable-win+net45+wp80\AngleSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ChatExchange.Net, Version=5.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ChatExchange.Net.5.0.2-beta\lib\ChatExchange.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="CsQuery, Version=1.3.3.249, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
       <Private>True</Private>
@@ -110,10 +114,6 @@
     <ProjectReference Include="..\Data\Data.csproj">
       <Project>{7DD019C3-42A1-4F45-B2E4-1EE18BCD7CAF}</Project>
       <Name>Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Submodules\ChatExchange.Net\ChatExchange.Net\ChatExchange.Net.csproj">
-      <Project>{145AF77F-B475-40E4-8B85-CE3393BCD906}</Project>
-      <Name>ChatExchange.Net</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utils\Utils.csproj">
       <Project>{1B18CBB6-FB29-4F96-B9F5-E870A9983C67}</Project>
