--- a/Web/Web.config
+++ b/Web/Web.config
@@ -12,7 +12,7 @@
     <add name="DBConnectionString" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="SettingsFileLocation" value="C:\Development\vso\SOCloseVoteTracker\settings.json" />
+    <add key="SettingsFileLocation" value="../../../settings.json" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
