--- a/Web/packages.config
+++ b/Web/packages.config
@@ -34,5 +34,6 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="ServiceStack.Text" version="4.0.40" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
