--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -91,6 +91,14 @@
     <Compile Include="Migrations\201604011140557_FlagQuestionsAsBeingQueued.Designer.cs">
       <DependentUpon>201604011140557_FlagQuestionsAsBeingQueued.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604011223254_UseTimestampForEnqueingQuestions.cs" />
+    <Compile Include="Migrations\201604011223254_UseTimestampForEnqueingQuestions.Designer.cs">
+      <DependentUpon>201604011223254_UseTimestampForEnqueingQuestions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604011235372_TrackQuestionQueriesProperly.cs" />
+    <Compile Include="Migrations\201604011235372_TrackQuestionQueriesProperly.Designer.cs">
+      <DependentUpon>201604011235372_TrackQuestionQueriesProperly.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -119,6 +127,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604011140557_FlagQuestionsAsBeingQueued.resx">
       <DependentUpon>201604011140557_FlagQuestionsAsBeingQueued.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604011223254_UseTimestampForEnqueingQuestions.resx">
+      <DependentUpon>201604011223254_UseTimestampForEnqueingQuestions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604011235372_TrackQuestionQueriesProperly.resx">
+      <DependentUpon>201604011235372_TrackQuestionQueriesProperly.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
