--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -8,7 +8,7 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebUI-20160402124822.mdf;Initial Catalog=aspnet-WebUI-20160402124822;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBConnectionString" connectionString="Server=tcp:soclosevotetracker.database.windows.net,1433;Database=SOCloseVoteTrackerDB;User ID=SOCVRReadonly;Password=30QITGxS69dpd6aPRlr5mb7pkMvtAv;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
