Better way of re-queuing active questions.

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -115,6 +115,10 @@
     <Compile Include="Migrations\201604020756343_TrackReopenVotes.Designer.cs">
       <DependentUpon>201604020756343_TrackReopenVotes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604030710313_TrackTimeActive.cs" />
+    <Compile Include="Migrations\201604030710313_TrackTimeActive.Designer.cs">
+      <DependentUpon>201604030710313_TrackTimeActive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -161,6 +165,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604020756343_TrackReopenVotes.resx">
       <DependentUpon>201604020756343_TrackReopenVotes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604030710313_TrackTimeActive.resx">
+      <DependentUpon>201604030710313_TrackTimeActive.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
