Remove newrelic. Start tying reviews to questions

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -119,6 +119,10 @@
     <Compile Include="Migrations\201604030710313_TrackTimeActive.Designer.cs">
       <DependentUpon>201604030710313_TrackTimeActive.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604040220028_TieQuestionToReview.cs" />
+    <Compile Include="Migrations\201604040220028_TieQuestionToReview.Designer.cs">
+      <DependentUpon>201604040220028_TieQuestionToReview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -168,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604030710313_TrackTimeActive.resx">
       <DependentUpon>201604030710313_TrackTimeActive.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604040220028_TieQuestionToReview.resx">
+      <DependentUpon>201604040220028_TieQuestionToReview.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
