Bleh, fix web.config

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -27,9 +27,9 @@
       </system.Web>
   -->
   <system.net>
-    <defaultProxy>
+    <!--<defaultProxy>
       <proxy proxyaddress="http://gateway.zscaler.net:9400" />
-    </defaultProxy>
+    </defaultProxy>-->
   </system.net>
   <system.web>
     <authentication mode="None" />
