--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -229,10 +229,10 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <None Include="Properties\PublishProfiles\SOCloseVoteTracker - FTP %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\SOCloseVoteTracker - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\SOCloseVoteTracker - Web Deploy %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\SOCloseVoteTracker - Web Deploy.pubxml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <None Include="Properties\PublishProfiles\SOCloseVoteTrackerWorker - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\SOCloseVoteTrackerWorker - Web Deploy.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
