--- a/WebUI/ApplicationInsights.config
+++ b/WebUI/ApplicationInsights.config
@@ -57,5 +57,6 @@
     Note: If not present, please add <InstrumentationKey>Your Key</InstrumentationKey> to the top of this file.
   -->
   <!-- This key is for Application Insights resource 'SOCloseVoteTrackerUI' in resource group 'SOCloseVoteTrackerResourceGroup' -->
-  <InstrumentationKey>dc547ad9-4317-4672-ac83-ef0b7ef54960</InstrumentationKey>
+  <!-- This key is for Application Insights resource 'ApplicationInsights' in resource group 'SOCloseVoteTrackerResourceGroup' -->
+  <InstrumentationKey>d9c9c00d-3ead-4a25-a477-57b8ede83acd</InstrumentationKey>
 </ApplicationInsights>
